--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=9091
 #Tomcat Secure
 server.secure=false
 #Session Time out in Seconds
-server.servlet.session.timeout=1800
+server.servlet.session.cookie.max-age=300
+server.servlet.session.timeout=300
 #Max request parameters Count. A value of less than 0 means no limit.
 tomcat.maxParameterCount=-1
 #Spring Configuration to keep mysql connection alive when application idle.
