changes for Spring Upgrade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ logging.file.name=/recap-vol/logs/phase4-scsb-ui/phase4-scsb-ui.log
 #adding for monitoring
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+spring.config.import=optional:configserver:
