--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.3.1.RELEASE'
-		set('springCloudVersion', "Hoxton.SR5")
+		springBootVersion = '2.5.8'
+		set('springCloudVersion', "2020.0.5")
 	}
 	repositories {
 		mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
+	id 'org.springframework.boot' version '2.5.8'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id "org.sonarqube" version "2.8"
 }
@@ -41,7 +41,7 @@ repositories {
 
 
 dependencies {
-	compile fileTree(dir: '/data/commonjar', include: '*2.1.jar')
+	implementation fileTree(dir: '/data/commonjar', include: '*2.1.jar')
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
@@ -85,11 +85,11 @@ dependencies {
 	testImplementation('org.projectlombok:lombok:1.18.12')
 	testAnnotationProcessor('org.projectlombok:lombok:1.18.12')
 	runtimeOnly('mysql:mysql-connector-java')
-	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
-	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
-	testCompile 'junit:junit:4.12'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
+	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
+	testImplementation 'junit:junit:4.12'
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
 
 configurations.all {
@@ -118,7 +118,7 @@ jacocoTestReport {
 
 task scsbUiJavadocs(type: Javadoc) {
 	source = sourceSets.main.java
-	classpath = configurations.compile
+	classpath = configurations.implementation
 	options.addStringOption('Xdoclint:none', '-quiet')
 	String home = System.getProperty("user.home");
 	destinationDir =  new File(home+"/scsb-javadocs/scsb-ui");
@@ -127,4 +127,9 @@ task scsbUiJavadocs(type: Javadoc) {
 
 bootJar {
 	layered()
+}
+
+jar {
+	enabled = false
+	archiveClassifier = '' //use empty string
 }
