--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
 
 plugins {
 	id 'org.springframework.boot' version '2.5.8'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id "org.sonarqube" version "2.8"
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id "org.sonarqube" version "3.3"
 }
 
 apply plugin: 'java'
@@ -30,7 +30,7 @@ test {
 bootJar {
 	archiveBaseName = 'Phase4-SCSB-UI'
 	archiveVersion = '0.0.1-SNAPSHOT'
-	layered()
+	// layered()
 }
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -42,11 +42,10 @@ repositories {
 
 dependencies {
 	implementation fileTree(dir: '/data/commonjar', include: '*2.1.jar')
-
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
-	implementation 'org.json:json:20200518'
-	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation group: 'org.json', name: 'json', version: '20211205'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
 	implementation('commons-beanutils:commons-beanutils:1.9.4')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -59,35 +58,34 @@ dependencies {
 	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.6.RELEASE')
 	implementation('org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE')
 	implementation('org.springframework.security:spring-security-oauth2-client:5.3.2.RELEASE')
-	implementation('org.springframework.data:spring-data-solr:4.1.7.RELEASE')
+	implementation('org.springframework.data:spring-data-solr:4.3.15')
 			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
 	implementation('org.codehaus.jettison:jettison:1.4.1')
-    implementation('org.springframework.data:spring-data-commons')
+	implementation('org.springframework.data:spring-data-commons')
 	implementation('org.springframework.data:spring-data-jpa')
-	implementation('com.google.guava:guava:29.0-jre') {exclude module: "solr-solrj"}
-  	implementation('org.apache.solr:solr-solrj:8.5.1')
+	implementation('com.google.guava:guava:31.0.1-jre') {exclude module: "solr-solrj"}
+	implementation('org.apache.solr:solr-solrj:8.11.1')
 	implementation('info.freelibrary:freelib-marc4j:2.6.12')
 	implementation(group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0')
-	implementation('io.springfox:springfox-swagger-ui:2.9.2')
-	implementation('io.springfox:springfox-swagger2:2.9.2')
-  //implementation('org.codehaus.jackson:jackson-mapper-asl:1.9.13')
+	implementation('io.springfox:springfox-swagger-ui:3.0.0')
+	implementation('io.springfox:springfox-swagger2:3.0.0')
+	//implementation('org.codehaus.jackson:jackson-mapper-asl:1.9.13')
 	implementation('org.apache.shiro:shiro-core:1.5.2')
 	implementation('javax.validation:validation-api:2.0.1.Final')
-	implementation('org.projectlombok:lombok:1.18.12')
+	implementation('org.projectlombok:lombok:1.18.22')
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.amqp:spring-rabbit'
 	implementation 'net.logstash.logback:logstash-logback-encoder:6.4'
-	implementation 'com.google.code.gson:gson:2.8.0'
-	annotationProcessor('org.projectlombok:lombok:1.18.12')
-	testImplementation('org.projectlombok:lombok:1.18.12')
-	testAnnotationProcessor('org.projectlombok:lombok:1.18.12')
-	runtimeOnly('mysql:mysql-connector-java')
-	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
-	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
-	testImplementation 'junit:junit:4.12'
+	annotationProcessor('org.projectlombok:lombok:1.18.22')
+	testImplementation('org.projectlombok:lombok:1.18.22')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.22')
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+	testImplementation 'junit:junit:4.13.2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
@@ -107,13 +105,20 @@ dependencyManagement {
 }
 
 jacocoTestReport {
-	group = "Reporting"
+	dependsOn test // tests are required to run before generating the report
+}
+
+jacocoTestReport {
 	reports {
-		xml.enabled true
-		csv.enabled false
-		html.enabled = true
-		html.destination file ("${buildDir}/jacocoHtml")
+		xml.required = true
+		csv.required = false
+		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
 	}
+}
+
+jacoco {
+	toolVersion = "0.8.7"
+	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
 task scsbUiJavadocs(type: Javadoc) {
@@ -125,9 +130,11 @@ task scsbUiJavadocs(type: Javadoc) {
 
 }
 
+/*
 bootJar {
 	layered()
 }
+*/
 
 jar {
 	enabled = false
