--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	implementation fileTree(dir: '/data/commonjar', include: '*2.1.jar')
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation group: 'org.json', name: 'json', version: '20211205'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
