change from phase4-scsb to scsb

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 }
 
 bootJar {
-	archiveBaseName = 'Phase4-SCSB-UI'
+	archiveBaseName = 'SCSB-UI'
 	archiveVersion = '0.0.1-SNAPSHOT'
 	// layered()
 }
