--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,8 @@ dependencies {
 	testImplementation('org.projectlombok:lombok:1.18.22')
 	testAnnotationProcessor('org.projectlombok:lombok:1.18.22')
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
 	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 	testImplementation 'junit:junit:4.13.2'
