--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.7.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id "org.sonarqube" version "3.3"
+	id "org.sonarqube" version "3.4.0.2513"
 }
 
 apply plugin: 'java'
@@ -56,15 +56,15 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.security:spring-security-jwt')
 	implementation('org.springframework.security:spring-security-cas')
-	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.6.RELEASE')
-	implementation('org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE')
-	implementation('org.springframework.security:spring-security-oauth2-client:5.3.2.RELEASE')
+	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8')
+	implementation('org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE')
+	implementation('org.springframework.security:spring-security-oauth2-client:5.7.3')
 	implementation('org.springframework.data:spring-data-solr:4.3.15')
 			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
-	implementation('org.codehaus.jettison:jettison:1.4.1')
+	implementation('org.codehaus.jettison:jettison:1.5.0')
 	implementation('org.springframework.data:spring-data-commons')
 	implementation('org.springframework.data:spring-data-jpa')
-	implementation('com.google.guava:guava:31.0.1-jre') {exclude module: "solr-solrj"}
+	implementation('com.google.guava:guava:31.1-jre') {exclude module: "solr-solrj"}
 	implementation('org.apache.solr:solr-solrj:8.11.1')
 	implementation('info.freelibrary:freelib-marc4j:2.6.12')
 	implementation(group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0')
@@ -94,7 +94,7 @@ dependencies {
 configurations.all {
 	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
 		if (details.requested.group == 'org.apache.logging.log4j') {
-			details.useVersion '2.17.0'
+			details.useVersion '2.18.0'
 		}
 	}
 }
@@ -118,7 +118,7 @@ jacocoTestReport {
 }
 
 jacoco {
-	toolVersion = "0.8.7"
+	toolVersion = "0.8.8"
 	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
