--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ dependencies {
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 	testImplementation 'junit:junit:4.13.2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+	//testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
 
 configurations.all {
@@ -107,6 +107,13 @@ dependencyManagement {
 
 jacocoTestReport {
 	dependsOn test // tests are required to run before generating the report
+}
+
+test {
+	jacoco {
+		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+		classDumpDir = file("$buildDir/jacoco/classpathdumps")
+	}
 }
 
 jacocoTestReport {
@@ -131,13 +138,22 @@ task scsbUiJavadocs(type: Javadoc) {
 
 }
 
-/*
-bootJar {
-	layered()
+sonarqube {
+	properties {
+		property "systemProp.sonar.host.url", ""
+		property "systemProp.sonar.jdbc.url", ""
+		property "systemProp.sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+		property "sonar.projectName", "scsb-etl"
+		property "systemProp.sonar.jdbc.username", ""
+		property "systemProp.sonar.jdbc.password", ""
+	}
 }
-*/
 
 jar {
 	enabled = false
 	archiveClassifier = '' //use empty string
+}
+
+test {
+	forkEvery = 1
 }
