--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ sonarqube {
 		property "systemProp.sonar.host.url", ""
 		property "systemProp.sonar.jdbc.url", ""
 		property "systemProp.sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-		property "sonar.projectName", "scsb-etl"
+		property "sonar.projectName", "scsb-ui-service"
 		property "systemProp.sonar.jdbc.username", ""
 		property "systemProp.sonar.jdbc.password", ""
 	}
