--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.7.8'
-		set('springCloudVersion', "2021.0.5")
+		springBootVersion = '2.7.15'
+		set('springCloudVersion', "2021.0.8")
 	}
 	repositories {
 		mavenCentral()
@@ -12,9 +12,9 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.7.8'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id "org.sonarqube" version "3.4.0.2513"
+	id 'org.springframework.boot' version '2.7.15'
+	id 'io.spring.dependency-management' version '1.1.3'
+	id "org.sonarqube" version "4.3.1.3277"
 }
 
 apply plugin: 'java'
@@ -45,7 +45,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-	implementation group: 'org.json', name: 'json', version: '20230227'
+	implementation group: 'org.json', name: 'json', version: '20230618'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 
 	implementation('commons-beanutils:commons-beanutils:1.9.4')
@@ -61,7 +61,7 @@ dependencies {
 	implementation('org.springframework.security:spring-security-oauth2-client:5.7.6')
 	implementation('org.springframework.data:spring-data-solr:4.3.15')
 			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
-	implementation('org.codehaus.jettison:jettison:1.5.3')
+	implementation('org.codehaus.jettison:jettison:1.5.4')
 	implementation('org.springframework.data:spring-data-commons')
 	implementation('org.springframework.data:spring-data-jpa')
 	implementation('com.google.guava:guava:31.1-jre') {exclude module: "solr-solrj"}
@@ -71,19 +71,19 @@ dependencies {
 	implementation('io.springfox:springfox-swagger2:3.0.0')
 	implementation('org.apache.shiro:shiro-core:1.5.2')
 	implementation('javax.validation:validation-api:2.0.1.Final')
-	implementation('org.projectlombok:lombok:1.18.26')
+	implementation('org.projectlombok:lombok:1.18.28')
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.amqp:spring-rabbit'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
-	annotationProcessor('org.projectlombok:lombok:1.18.26')
-	testImplementation('org.projectlombok:lombok:1.18.26')
-	testAnnotationProcessor('org.projectlombok:lombok:1.18.26')
+	annotationProcessor('org.projectlombok:lombok:1.18.28')
+	testImplementation('org.projectlombok:lombok:1.18.28')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.28')
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
 	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 	testImplementation 'junit:junit:4.13.2'
@@ -94,7 +94,7 @@ dependencies {
 configurations.all {
 	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
 		if (details.requested.group == 'org.apache.logging.log4j') {
-			details.useVersion '2.20.0'
+			details.useVersion '3.0.0-alpha1'
 		}
 	}
 }
@@ -125,7 +125,7 @@ jacocoTestReport {
 }
 
 jacoco {
-	toolVersion = "0.8.8"
+	toolVersion = "0.8.10"
 	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
