--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ dependencies {
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
+	testImplementation 'org.mockito:mockito-inline:5.2.0'
 	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 	testImplementation 'junit:junit:4.13.2'
