--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.7.15'
-		set('springCloudVersion', "2021.0.8")
+		springBootVersion = '3.4.0'
+		set('springCloudVersion', "2024.0.0")
 	}
 	repositories {
 		mavenCentral()
@@ -12,9 +12,9 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.7.15'
-	id 'io.spring.dependency-management' version '1.1.3'
-	id "org.sonarqube" version "4.3.1.3277"
+	id 'org.springframework.boot' version '3.4.0'
+	id 'io.spring.dependency-management' version '1.1.7'
+	id "org.sonarqube" version "6.0.1.5171"
 }
 
 apply plugin: 'java'
@@ -41,49 +41,52 @@ repositories {
 
 
 dependencies {
-	implementation fileTree(dir: '/data/commonjar', include: '*2.5.jar')
+	implementation fileTree(dir: '/data/commonjar', include: '*2.9.jar')
+	implementation fileTree(dir: '/data/commonjar', include: '*base-1.0.jar')
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-	implementation group: 'org.json', name: 'json', version: '20230618'
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+	implementation group: 'org.json', name: 'json', version: '20240303'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
 
 	implementation('commons-beanutils:commons-beanutils:1.9.4')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation("org.springframework.boot:spring-boot-starter-data-rest")
-	//implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web-services')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.security:spring-security-jwt')
-	implementation('org.springframework.security:spring-security-cas')
+	implementation 'org.springframework.security:spring-security-cas:6.4.2'
+	implementation 'org.springframework.security:spring-security-config:6.4.2'
 	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8')
-	implementation('org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE')
-	implementation('org.springframework.security:spring-security-oauth2-client:5.7.6')
+	implementation 'org.springframework.security:spring-security-oauth2-client:6.4.2'
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.4.2'
+	implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.4.0'
 	implementation('org.springframework.data:spring-data-solr:4.3.15')
 			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
 	implementation('org.codehaus.jettison:jettison:1.5.4')
 	implementation('org.springframework.data:spring-data-commons')
 	implementation('org.springframework.data:spring-data-jpa')
-	implementation('com.google.guava:guava:31.1-jre') {exclude module: "solr-solrj"}
-	implementation('org.apache.solr:solr-solrj:8.11.2')
+	implementation('com.google.guava:guava:33.4.0-jre') {exclude module: "solr-solrj"}
+	implementation('org.apache.solr:solr-solrj:9.6.1')
 	implementation('info.freelibrary:freelib-marc4j:2.6.12')
 	implementation(group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0')
 	implementation('io.springfox:springfox-swagger2:3.0.0')
-	implementation('org.apache.shiro:shiro-core:1.5.2')
-	implementation('javax.validation:validation-api:2.0.1.Final')
-	implementation('org.projectlombok:lombok:1.18.28')
+	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+	implementation('org.projectlombok:lombok:1.18.36')
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.11'
 	implementation 'org.springframework.amqp:spring-rabbit'
-	implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
-	annotationProcessor('org.projectlombok:lombok:1.18.32')
-	testImplementation('org.projectlombok:lombok:1.18.32')
-	testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
+	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
+	annotationProcessor('org.projectlombok:lombok:1.18.36')
+	testImplementation('org.projectlombok:lombok:1.18.36')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.36')
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.1.0'
+	implementation 'org.jasig.cas.client:cas-client-core:3.6.4'
+	implementation 'commons-io:commons-io:2.18.0'
 
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'
 	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 	testImplementation 'junit:junit:4.13.2'
@@ -94,7 +97,7 @@ dependencies {
 configurations.all {
 	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
 		if (details.requested.group == 'org.apache.logging.log4j') {
-			details.useVersion '3.0.0-alpha1'
+			details.useVersion '3.0.0-beta2'
 		}
 	}
 }
@@ -129,7 +132,7 @@ jacocoTestReport {
 }
 
 jacoco {
-	toolVersion = "0.8.10"
+	toolVersion = "0.8.12"
 	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
