--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.min-evictable-idle-time-millis=60000
 #Spring Multipart File Properties
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+spring.cloud.compatibility-verifier.enabled=false
+
 
 #Logging Settings
 logging.file.name=/recap-vol/logs/phase4-scsb-ui/phase4-scsb-ui.log
